add lidar plugin

--- a/yahboomcar_description/CMakeLists.txt
+++ b/yahboomcar_description/CMakeLists.txt
@@ -33,6 +33,10 @@ install(
     worlds/
   DESTINATION share/${PROJECT_NAME}/worlds
 )
-
+install(
+  DIRECTORY
+    config/
+  DESTINATION share/${PROJECT_NAME}/config
+)
 ament_environment_hooks("${CMAKE_CURRENT_SOURCE_DIR}/env-hooks/${PROJECT_NAME}.dsv.in")
 ament_package()
