--- a/yahboomcar_description/config/ros_gz_bridge.yaml
+++ b/yahboomcar_description/config/ros_gz_bridge.yaml
@@ -1,9 +1,9 @@
 ---
-# - ros_topic_name: "/cmd_vel"
-#   gz_topic_name: "/cmd_vel"
-#   ros_type_name: "geometry_msgs/msg/Twist"
-#   gz_type_name: "gz.msgs.Twist"
-#   direction: ROS_TO_GZ
+- ros_topic_name: "/cmd_vel"
+  gz_topic_name: "/cmd_vel"
+  ros_type_name: "geometry_msgs/msg/Twist"
+  gz_type_name: "gz.msgs.Twist"
+  direction: ROS_TO_GZ
 
 # - ros_topic_name: "/steer_angle"
 #   gz_topic_name: "/model/mrbuggy3/steer_angle"
@@ -23,11 +23,11 @@
   gz_type_name: "gz.msgs.Clock"
   direction: GZ_TO_ROS
 
-# - ros_topic_name: "/odom"
-#   gz_topic_name: "/model/mrbuggy3/odometry"
-#   ros_type_name: "nav_msgs/msg/Odometry"
-#   gz_type_name: "gz.msgs.Odometry"
-#   direction: GZ_TO_ROS
+- ros_topic_name: "/odom"
+  gz_topic_name: "/model/yahboomcar/odometry"
+  ros_type_name: "nav_msgs/msg/Odometry"
+  gz_type_name: "gz.msgs.Odometry"
+  direction: GZ_TO_ROS
 
 - ros_topic_name: "/scan"
   gz_topic_name: "/scan"
@@ -41,11 +41,11 @@
 #   gz_type_name: "gz.msgs.Model"
 #   direction: GZ_TO_ROS
 
-# - ros_topic_name: "/tf"
-#   gz_topic_name: "/model/mrbuggy3/tf"
-#   ros_type_name: "tf2_msgs/msg/TFMessage"
-#   gz_type_name: "gz.msgs.Pose_V"
-#   direction: GZ_TO_ROS
+- ros_topic_name: "/tf"
+  gz_topic_name: "/model/yahboomcar/tf"
+  ros_type_name: "tf2_msgs/msg/TFMessage"
+  gz_type_name: "gz.msgs.Pose_V"
+  direction: GZ_TO_ROS
 
 - ros_topic_name: "/rgb_image"
   gz_topic_name: "/rgb_image"
@@ -53,8 +53,8 @@
   gz_type_name: "gz.msgs.Image"
   direction: GZ_TO_ROS
   
-# - ros_topic_name: "/camera_info"
-#   gz_topic_name: "/world/default/model/mrbuggy3/link/camera_link/sensor/camera/camera_info"
-#   ros_type_name: "sensor_msgs/msg/CameraInfo"
-#   gz_type_name: "gz.msgs.CameraInfo"
-#   direction: GZ_TO_ROS
+- ros_topic_name: "/camera_info"
+  gz_topic_name: "/camera_info"
+  ros_type_name: "sensor_msgs/msg/CameraInfo"
+  gz_type_name: "gz.msgs.CameraInfo"
+  direction: GZ_TO_ROS
